--- a/.github/workflows/selenium-test.yml
+++ b/.github/workflows/selenium-test.yml
@@ -1,10 +1,10 @@
-name: Selenium Tests
+name: Run Selenium Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   test:
@@ -23,10 +23,20 @@ jobs:
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
-          path: ~/.m2/repository
+          path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Run tests
-        run: mvn test
+      - name: Set up Chrome
+        uses: browser-actions/setup-chrome@v1
+
+      - name: Verify Chrome installation
+        run: chrome --version
+
+      - name: Run Selenium tests with Maven
+        env:
+          CHROME_BIN: chrome
+        run: |
+          export DISPLAY=:99
+          mvn test
